Modificación en el index

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 	<!--VINCULACIÓN VALIDATE.JS.-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
 	
-	
 
-	
 	<style>
 		header {
 			display: flex;
@@ -71,7 +69,8 @@
 		<img src="logo travel.png" alt="Logo Travel Center Vacation">
 
 <!--PRIMER CALL TO ACTION PARA INCITAR A LA COMPRA DEL SERVICIO. EL SEGUNDO PASO SERÁ
-	EL FORMULARIO SIMPRE Y EL TERCER CALL TO ACTION SERÍA EL FORM DE PROCESO.-->
+	EL FORMULARIO SIMPLE Y EL TERCER CALL TO ACTION SERÍA EL FORM DE PROCESO.-->
+
 	<button class="quiero-saber" onclick="enviarConsulta()"><strong>Quiero saber más</strong></button>
 
 		<div class="social-media">
@@ -85,6 +84,7 @@
 		CON EL OBJETIVO DE LOGRAR ARMONÍA CON LA PALETA DE COLORES DE  LA LANDING,
 		ES POR ESO QUE OFRECE UNA CONTINUIDAD CON TONOS SIMILARES A LOS DEL LOGO
 		Y LOS DIVERSOS ELEMENTOS DE LA LANDING)-->
+
 	<div class="slider">
 		<img src="principal2.jpg" alt="Imagen 1">
 		<div class="text-container" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 1; text-align: center; color: #FFFFFF; max-width: 30em;">
@@ -169,12 +169,14 @@
 	  
 </div>
 
+<!--IMAGEN SOBRE MEDIOS DE PAGO DISPONIBLES-->
 <div class="image-container">
 	<h3>Elegí tu medio de pago preferido</h3>
 	<img src="medios de pago.png" alt="Medios de pago" style="width: 80%;">
   </div>
 
-
+<!--TÍTULO DE LOS PACKS TURÍSTICOS (IMÁGENES PROVISORIAS, TENGO QUE AMPLIAR LA LETRA
+	DE LOS DISEÑOS PORQUE NO SE VEN BIEN)-->
   <div class="packs">
 	<h3>Y accedé al pack turístico de tus sueños</h3>
   </div>
@@ -193,7 +195,7 @@
 	<img src="mapa.png" alt="Imagen mapa turístico" style="width: 80%;">
   </div>
 
-
+<!--TÍTULO DE LOS TESTIMONIOS DE CLIENTES-->
   <div class="clientes">
 	<h3>¡Y disfrutá tanto como ellos!</h3>
 	<h3>Queremos que el tuyo sea el próximo testimonio</h3>
@@ -238,7 +240,7 @@
 	</div>
   </div>
   
-
+<!--TÍTULO PARA EL FORM DE COTIZACIÓN-->
   <div class="cotizar">
 	<h3>¿Qué esperás para cotizar tu próximo sueño?</h3>
   </div>
