--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
 
     <div class="image-container">
       <img src="inolvidable.jpg" alt="Inolvidables" class="image" />
-      <img src="emocionantes.jpg" alt="Emocionantes" class="image" />
-      <img src="incomparables.jpg" alt="Inolvidables" class="image" />
-      <img src="emocionantes.jpg" alt="Emocionantes" class="image" />
+      <img src="emocionante.jpg" alt="Emocionantes" class="image" />
+      <img src="incomparable.jpg" alt="Inolvidables" class="image" />
+      <img src="paradisiaca.jpg" alt="Emocionantes" class="image" />
     </div>
 
 	
