--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	<!--CABECERA DE LA PÁGINA. TUVE QUE INCLUIR ALGUNOS ELEMENTOS CSS
 	EN ESTE HTML PORQUE DE OTRO MODO, QUEDABAN LAS IMÁGENES DESALINEADAS.-->
 	<header>
-		<img src="logo travel.png" alt="Logo Travel Center Vacation">
+		<img src="" alt="Logo Travel Center Vacation">
 
 <!--PRIMER CALL TO ACTION PARA INCITAR A LA COMPRA DEL SERVICIO. EL SEGUNDO PASO SERÁ
 	EL FORMULARIO SIMPLE Y EL TERCER CALL TO ACTION SERÍA EL FORM DE PROCESO.-->
@@ -74,9 +74,9 @@
 	<button class="quiero-saber" onclick="enviarConsulta()"><strong>Quiero saber más</strong></button>
 
 		<div class="social-media">
-			<a href="#"><img src="ig (2).png" alt="Instagram"></a>
-			<a href="#"><img src="fb (2).png" alt="Facebook"></a>
-			<a href="#"><img src="tw (2).png" alt="Twitter"></a>
+			<a href="#"><img src="./img/ig.png" alt="Instagram"></a>
+			<a href="#"><img src="fb.png" alt="Facebook"></a>
+			<a href="#"><img src="tw.png" alt="Twitter"></a>
 		</div>
 	</header>
 
@@ -86,7 +86,7 @@
 		Y LOS DIVERSOS ELEMENTOS DE LA LANDING)-->
 
 	<div class="slider">
-		<img src="principal2.jpg" alt="Imagen 1">
+		<img src="principal.jpg" alt="Imagen 1">
 		<div class="text-container" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 1; text-align: center; color: #FFFFFF; max-width: 30em;">
 			
 			<!--TÍTULO DE LA LANDING Y PRESENTACIÓN DE LA EMPRESA-->
@@ -182,10 +182,10 @@
   </div>
 
     <div class="image-container">
-      <img src="vacaciones4.jpg" alt="Inolvidables" class="image" />
-      <img src="emocionante.jpg" alt="Emocionantes" class="image" />
-      <img src="incomparable.jpg" alt="Inolvidables" class="image" />
-      <img src="paradisiaca.jpg" alt="Emocionantes" class="image" />
+      <img src="vacaciones1.jpg" alt="Inolvidables" class="image" />
+      <img src="vacaciones2.jpg" alt="Emocionantes" class="image" />
+      <img src="ivacaciones3.jpg" alt="Inolvidables" class="image" />
+      <img src="vacaciones4.jpg" alt="Emocionantes" class="image" />
     </div>
 
 	
@@ -218,7 +218,7 @@
   
 	<div class="testimonio">
 	  <div class="foto-testimonio">
-		<img src="testimonio22.jpg" alt="nombre-del-cliente">
+		<img src="testimonio2.jpg" alt="nombre-del-cliente">
 	  </div>
 	  <div class="informacion-testimonio">
 		<h4> Juan, 42 años </h4>
@@ -229,7 +229,7 @@
   
 	<div class="testimonio">
 	  <div class="foto-testimonio">
-		<img src="testimonio33.jpg" alt="nombre-del-cliente">
+		<img src="testimonio3.jpg" alt="nombre-del-cliente">
 	  </div>
 	  <div class="informacion-testimonio">
 		<h4> Laura, 28 años
