Modificación en index

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	<!--CABECERA DE LA PÁGINA. TUVE QUE INCLUIR ALGUNOS ELEMENTOS CSS
 	EN ESTE HTML PORQUE DE OTRO MODO, QUEDABAN LAS IMÁGENES DESALINEADAS.-->
 	<header>
-		<img src="" alt="Logo Travel Center Vacation">
+		<img src="./img/logotravel.png" alt="Logo Travel Center Vacation">
 
 <!--PRIMER CALL TO ACTION PARA INCITAR A LA COMPRA DEL SERVICIO. EL SEGUNDO PASO SERÁ
 	EL FORMULARIO SIMPLE Y EL TERCER CALL TO ACTION SERÍA EL FORM DE PROCESO.-->
@@ -75,8 +75,8 @@
 
 		<div class="social-media">
 			<a href="#"><img src="./img/ig.png" alt="Instagram"></a>
-			<a href="#"><img src="fb.png" alt="Facebook"></a>
-			<a href="#"><img src="tw.png" alt="Twitter"></a>
+			<a href="#"><img src="./img/fb.png" alt="Facebook"></a>
+			<a href="#"><img src="./img/tw.png" alt="Twitter"></a>
 		</div>
 	</header>
 
