Modifiqué index agregando img

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 		Y LOS DIVERSOS ELEMENTOS DE LA LANDING)-->
 
 	<div class="slider">
-		<img src="principal.jpg" alt="Imagen 1">
+		<img src="./img/principal.jpg" alt="Imagen 1">
 		<div class="text-container" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 1; text-align: center; color: #FFFFFF; max-width: 30em;">
 			
 			<!--TÍTULO DE LA LANDING Y PRESENTACIÓN DE LA EMPRESA-->
