--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 	(LA PRESENTACIÓN PERSONAL, SE ACLARÓ EN LA CLASE DE REFUERZO DEL 31/3 QUE NO ERA OBLIGATORIA, 
 		QUE SE PODÍA REALIZAR MEDIANTE LINK EXTERNO) -->
 
-	<section class="team-section" style="background-image: url('fotos.png'); background-position: left; text-align: right;">
+	<section class="team-section" style="background-image: url('./img/fotos.png'); background-position: left; text-align: right;">
 		<h1>Team Travel Center</h1>
 		<p>
 		  ¿Querés hacer de tus sueños una realidad? 
