Agregué imagen medio de pago

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 <!--IMAGEN SOBRE MEDIOS DE PAGO DISPONIBLES-->
 <div class="image-container">
 	<h3>Elegí tu medio de pago preferido</h3>
-	<img src="medios de pago.png" alt="Medios de pago" style="width: 80%;">
+	<img src="./img/mediosdepago.png" alt="Medios de pago" style="width: 80%;">
   </div>
 
 <!--TÍTULO DE LOS PACKS TURÍSTICOS (IMÁGENES PROVISORIAS, TENGO QUE AMPLIAR LA LETRA
