Agregué img de packs

--- a/index.html
+++ b/index.html
@@ -182,10 +182,10 @@
   </div>
 
     <div class="image-container">
-      <img src="vacaciones1.jpg" alt="Inolvidables" class="image" />
-      <img src="vacaciones2.jpg" alt="Emocionantes" class="image" />
-      <img src="ivacaciones3.jpg" alt="Inolvidables" class="image" />
-      <img src="vacaciones4.jpg" alt="Emocionantes" class="image" />
+      <img src="./img/vacaciones1.jpg" alt="Inolvidables" class="image" />
+      <img src="./img/vacaciones2.jpg" alt="Emocionantes" class="image" />
+      <img src="./img/vacaciones3.jpg" alt="Inolvidables" class="image" />
+      <img src="./img/vacaciones4.jpg" alt="Emocionantes" class="image" />
     </div>
 
 	
