--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
 <!-- IMAGEN MAPA TURÍSTICO -->
   <div style="text-align: center; margin: 30px; display: inline-block;">
-	<img src="mapa.png" alt="Imagen mapa turístico" style="width: 80%;">
+	<img src="./img/mapa.png" alt="Imagen mapa turístico" style="width: 80%;">
   </div>
 
 <!--TÍTULO DE LOS TESTIMONIOS DE CLIENTES-->
