Agregué testimonio1 img

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
   <div class="testimonios-container">
 	<div class="testimonio">
 	  <div class="foto-testimonio">
-		<img src="Testimonio1.jpg" alt="nombre-del-cliente">
+		<img src="./img/Testimonio1.jpg" alt="nombre-del-cliente">
 	  </div>
 	  <div class="informacion-testimonio">
 		<h4> Gabriela, 35 años
