Agregué testimonio2 img

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
   
 	<div class="testimonio">
 	  <div class="foto-testimonio">
-		<img src="testimonio2.jpg" alt="nombre-del-cliente">
+		<img src="./img/testimonio2.jpg" alt="nombre-del-cliente">
 	  </div>
 	  <div class="informacion-testimonio">
 		<h4> Juan, 42 años </h4>
