Agregué testimonio3 img

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
   
 	<div class="testimonio">
 	  <div class="foto-testimonio">
-		<img src="testimonio3.jpg" alt="nombre-del-cliente">
+		<img src="./img/testimonio3.jpg" alt="nombre-del-cliente">
 	  </div>
 	  <div class="informacion-testimonio">
 		<h4> Laura, 28 años
