Agregué ciudades img

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ ALOJAMIENTO Y TRANSPORTE -->
 	LANDING, PERO OCUPANDO MENOS ESPACIO QUE LA IMAGEN PRINCIPAL -->
 
    <div class="container">
-	<img src="ciudades.png" alt="Ciudades del mundo" class="cities-image">
+	<img src="./img/ciudades.png" alt="Ciudades del mundo" class="cities-image">
 </div>
 
    <!-- EL FOOTER INCLUYE ENLACE A REPOSITORIO A MODO DE PRESENTACIÓN PERSONAL, TAL COMO SE 
