--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ES">
 <head>
 	<meta charset="UTF-8">
 	<title>Agencia de Viajes Travel Center Vacation</title>
