Agregué comillas que faltaban

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 		<input type="text" id="nombre" name="nombre">
 
 		<label for="nombre">Apellido</label>
-		<input type="text" id="nombre" name="apellido>
+		<input type="text" id="nombre" name="apellido">
   
 		<label for="email">Correo electrónico:</label>
 		<input type="email" id="email" name="email">
