Cambio de texto de presentación team

--- a/index.html
+++ b/index.html
@@ -117,27 +117,16 @@
 	(LA PRESENTACIÓN PERSONAL, SE ACLARÓ EN LA CLASE DE REFUERZO DEL 31/3 QUE NO ERA OBLIGATORIA, 
 		QUE SE PODÍA REALIZAR MEDIANTE LINK EXTERNO) -->
 
-	<section class="team-section" style="background-image: url('./img/fotos.png'); background-position: left; text-align: right;">
+	<section class="team-section" style="background-image: url('#'); background-position: left; text-align: right;">
 		<h2>Team Travel Center</h2>
 		<p>
-		  ¿Querés hacer de tus sueños una realidad? 
-		  ¡Entonces estás en el lugar correcto! 
-		  Somos el equipo de Travel Center Vacation, y estamos aquí para ayudarte a 
-		  descubrir el mundo.
-		  Somos expertos en viajes, apasionados por nuestro trabajo y comprometidos en ofrecerte 
-		  la mejor atención y servicio personalizado. 
-		  Nos encargamos de todo, desde la elección de destinos 
-		  hasta la planificación de actividades y alojamiento, 
-		  para que no tengas que preocuparte por nada. Sólo de disfrutar.
-		  Además, estamos constantemente actualizándonos en cuanto a 
-		 tendencias para poder brindarte siempre las 
-		  mejores opciones, y hacemos todo lo posible para que 
-		  tu experiencia sea única e inolvidable.
-		  En Travel Center, creemos que viajar es una de 
-		  las mejores formas de enriquecer nuestra vida, 
-		  y estamos aquí para hacerlo realidad para vos. 
-		 ¡Dejanos ayudarte a descubrir 
-		  el mundo y vivir momentos inolvidables!
+			¿Estás listo para hacer realidad tus sueños de viajar por el mundo? Si es así, ¡llegaste al lugar correcto! Somos el equipo de Travel Center Vacation, una agencia de viajes comprometida a ayudarte a descubrir los destinos más fascinantes del planeta.
+
+			Nos apasiona nuestro trabajo y estamos enfocados en brindarte la mejor atención y servicio personalizado en todo momento. Desde la elección de destinos hasta la planificación de actividades y alojamiento, nos encargamos de todo para que puedas disfrutar sin preocupaciones.
+			
+			En Travel Center Vacation, estamos en constante actualización sobre las últimas tendencias de viaje para brindarte siempre las mejores opciones y asegurarnos de que tu experiencia sea única e inolvidable.
+			
+			Para nosotros, viajar es una de las mejores maneras de enriquecer nuestras vidas, y queremos ayudarte a hacerlo realidad. ¡Permítenos guiarte en esta aventura de descubrir el mundo y crear momentos inolvidables juntos!
 		</p>
 	  </section>
 	  
@@ -175,8 +164,7 @@
 	<img src="./img/mediosdepago.png" alt="Medios de pago" style="width: 80%;">
   </div>
 
-<!--TÍTULO DE LOS PACKS TURÍSTICOS (IMÁGENES PROVISORIAS, TENGO QUE AMPLIAR LA LETRA
-	DE LOS DISEÑOS PORQUE NO SE VEN BIEN)-->
+<!--TÍTULO DE LOS PACKS TURÍSTICOS-->
   <div class="packs">
 	<h3>Y accedé al pack turístico de tus sueños</h3>
   </div>
