Prueba de imagen

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 	(LA PRESENTACIÓN PERSONAL, SE ACLARÓ EN LA CLASE DE REFUERZO DEL 31/3 QUE NO ERA OBLIGATORIA, 
 		QUE SE PODÍA REALIZAR MEDIANTE LINK EXTERNO) -->
 
-	<section class="team-section" style="background-image: url('#'); background-position: left; text-align: right;">
+	<section class="team-section" style="background-image: url('./img/fotos.png'); background-position: left; text-align: right;">
 		<h2>Team Travel Center</h2>
 		<p>
 			¿Estás listo para hacer realidad tus sueños de viajar por el mundo? Si es así, ¡llegaste al lugar correcto! Somos el equipo de Travel Center Vacation, una agencia de viajes comprometida a ayudarte a descubrir los destinos más fascinantes del planeta.
