Agregué texto previo al form de cotización

--- a/index.html
+++ b/index.html
@@ -228,10 +228,13 @@
   </div>
   
 <!--TÍTULO PARA EL FORM DE COTIZACIÓN-->
-  <div class="cotizar">
-	<h3>¿Qué esperás para cotizar tu próximo sueño?</h3>
-  </div>
-
+  
+	<div class="cotizar">
+		<h3>¿Qué esperás para cotizar tu próximo sueño?</h3>
+	</div>
+	<p class="texto-gris">Estamos encantados de ayudarte a planificar tu próximo viaje y hacerlo realidad. 
+		Para obtener una cotización personalizada que se adapte a tus necesidades y presupuesto, 
+		por favor completa el siguiente formulario.</p>
 
   <!-- FORMULARIO DE PROCESO ESTILO WIZARD -->
   <!-- PASO 1 INICIA SOLICITANDO NOMBRE Y APELLIDO Y UNA VEZ QUE SE COMPETE
