--- a/index.html
+++ b/index.html
@@ -169,6 +169,16 @@
 	<h3>Y accedé al pack turístico de tus sueños</h3>
   </div>
 
+  <!--PÁRRAFO CON TEXTO-->
+<div class="texto-pack">
+	<p>Con nuestro paquete turístico personalizado, podrás diseñar el viaje que siempre deseaste. 
+		Explorá destinos exóticos, conocé culturas fascinantes, disfrutá de la gastronomía local y relajate 
+		en las playas más paradisíacas. ¡Todo lo que necesitás para unas vacaciones inolvidables lo encontrarás en Travel Center Vacation 
+		¿Qué esperás para acceder al pack turístico de tus sueños? Nuestros expertos en viajes están a tu disposición para ayudarte a planificar la aventura de tu vida. 
+		¡Comenzá a hacer tus sueños realidad hoy mismo!</p>
+  </div>
+
+  <!--IMÁGENES DE PACKS DE VACACIONES-->
     <div class="image-container">
       <img src="./img/vacaciones1.jpg" alt="Inolvidables" class="image" />
       <img src="./img/vacaciones2.jpg" alt="Emocionantes" class="image" />
@@ -230,11 +240,11 @@
 <!--TÍTULO PARA EL FORM DE COTIZACIÓN-->
   
 	<div class="cotizar">
-		<h3>¿Qué esperás para cotizar tu próximo sueño?</h3>
+		<h3>¿Qué esperás para cotizar el viaje de tus sueños?</h3>
 	</div>
 	<p class="texto-gris">Estamos encantados de ayudarte a planificar tu próximo viaje y hacerlo realidad. 
 		Para obtener una cotización personalizada que se adapte a tus necesidades y presupuesto, 
-		por favor completa el siguiente formulario.</p>
+		por favor, completá el siguiente formulario.</p>
 
   <!-- FORMULARIO DE PROCESO ESTILO WIZARD -->
   <!-- PASO 1 INICIA SOLICITANDO NOMBRE Y APELLIDO Y UNA VEZ QUE SE COMPETE
