--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 	
 </head>
 <body>
-	<!--CABECERA DE LA PÁGINA. TUVE QUE INCLUIR ALGUNOS ELEMENTOS CSS
-	EN ESTE HTML PORQUE DE OTRO MODO, QUEDABAN LAS IMÁGENES DESALINEADAS.-->
+	<!--CABECERA DE LA PÁGINA.-->
 	<header>
 		<img src="./img/logotravel.png" alt="Logo Travel Center Vacation">
 
