ordenando html y css

--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
 			<a href="#"><img src="./img/tw.png" alt="Twitter"></a>
 		</div>
 	</header>
-
+<main>
 	<!--IMAGEN DE FONDO MÁS TÍTULO Y PRESENTACIÓN DE LA EMPRESA (LA IMAGEN SE ELIGIÓ
 		CON EL OBJETIVO DE LOGRAR ARMONÍA CON LA PALETA DE COLORES DE  LA LANDING,
 		ES POR ESO QUE OFRECE UNA CONTINUIDAD CON TONOS SIMILARES A LOS DEL LOGO
 		Y LOS DIVERSOS ELEMENTOS DE LA LANDING)-->
 
-	<div class="slider">
-		<img src="./img/principal.jpg" alt="Imagen 1">
-		<div class="text-container" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 1; text-align: center; color: #FFFFFF; max-width: 30em;">
-			
+		<div class="slider">
+			<img src="./img/principal.jpg" alt="Imagen 1">
+			<div class="text-container">
+				
 			<!--TÍTULO DE LA LANDING Y PRESENTACIÓN DE LA EMPRESA-->
 
 			<h1 class="titulo"></h1>
@@ -136,7 +136,7 @@
       <img src="./img/vacaciones4.jpg" alt="Emocionantes" class="image" />
     </div>
 
-	
+</main>
 
 <!-- IMAGEN MAPA TURÍSTICO -->
   <div style="text-align: center; margin: 30px; display: inline-block;">
