Reacomodando código css

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 		<div class="slider">
 			<img src="./img/principal.jpg" alt="Imagen 1">
 			<div class="text-container">
-				
+
 			<!--TÍTULO DE LA LANDING Y PRESENTACIÓN DE LA EMPRESA-->
 
 			<h1 class="titulo"></h1>
 			
-			<h2>¡Tu sueño de viajar hecho realidad!</h2>
+			<h2 class="titulo">¡Tu sueño de viajar hecho realidad!</h2>
 	
 			<p class="rectangulo">Te damos la bienvenida a 
 				la agencia de viajes que te lleva a los 
