Modifiqué inputs del form

--- a/index.html
+++ b/index.html
@@ -90,8 +90,9 @@
 		<label for="nombre">Nombre</label>
 		<input type="text" id="nombre" name="nombre">
 
-		<label for="nombre">Apellido</label>
-		<input type="text" id="nombre" name="apellido">
+		<label for="apellido">Apellido</label>
+        <input type="text" id="apellido" name="apellido">
+
   
 		<label for="email">Correo electrónico:</label>
 		<input type="email" id="email" name="email">
