--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>Agencia de Viajes Travel Center Vacation</title>
+	<title>Agencia de Viajes Travel Center Vacation - Paquetes turísticos - tours - excursiones </title>
 	<!--VINCULACIÓN DE ESTILOS.-->
 	<link rel="stylesheet" href="styles.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
