Modificando estilo de footer

--- a/index.html
+++ b/index.html
@@ -276,10 +276,21 @@ ALOJAMIENTO Y TRANSPORTE -->
 Y NO UNA PRESENTACIÓN PERSONAL DEL ALUMNO. CABE DESTACAR QUE DICHA PRESENTACIÓN
 FIGURARÁ EN LA WIKI DE GITHUB JUNTO A LA PRESENTACIÓN DEL PROYECTO-->
 
-  <footer class="footer">
-	<p>Contacto: 0800-999-TRAVEL | Dirección: Av. Buenos Aires 1234, CABA | Email: info@travelcenter.com</p>
-	<p>Derechos reservados © 2023 Travel Center Vacation By <a href="https://github.com/nzalazarap">Noemí Zalazar</a> para Argentina Programa 4-0.</p>
-</footer>
+<footer class="footer">
+	<div class="footer-top">
+	  <p>Contacto: 0800-999-TRAVEL | Dirección: Av. Buenos Aires 1234, CABA | Email: info@travelcenter.com</p>
+	  <div class="footer-social">
+		<a href="#"><img src="./img/fb.png" alt="Facebook"></a>
+		<a href="#"><img src="./img/ig.png" alt="Instagram"></a>
+		<a href="#"><img src="./img/tw.png" alt="Twitter"></a>
+	  </div>
+	  
+	</div>
+	<div class="footer-bottom">
+	  <p>Derechos reservados © 2023 Travel Center Vacation By <a href="https://github.com/nzalazarap">Noemí Zalazar</a> para Argentina Programa 4-0.</p>
+	</div>
+  </footer>
+  
 
   <script>
 	document.querySelector('.titulo').textContent = 'Travel Center Vacation';
