--- a/index.html
+++ b/index.html
@@ -104,8 +104,11 @@
 	  </form>
 	</div>
   </div>
-  
-  
+  <!--IMAGEN DESTINOS-->
+  <div class="image-container">
+	<img src="./img/destinos.png" alt="Destinos" class="img-right">
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pulvinar, mi vel molestie consectetur, ex nisi tempor enim, ut bibendum velit nulla in risus. Sed eleifend nisl vel posuere finibus.</p>
+</div>
 
 <!--IMAGEN SOBRE MEDIOS DE PAGO DISPONIBLES-->
 <div class="image-container">
