Cambio estilo de texto

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 	  </form>
 	</div>
   </div>
+
   <!--IMAGEN DESTINOS-->
   <div class="image-container">
 	<img src="./img/destinos.png" alt="Destinos" class="img-right">
@@ -120,14 +121,15 @@
 	<h3>Y accedé al pack turístico de tus sueños</h3>
   </div>
 
-  <!--PÁRRAFO CON TEXTO-->
-<div class="texto-pack">
-	<p>Con nuestro paquete turístico personalizado, podrás diseñar el viaje que siempre deseaste. 
-		Explorá destinos exóticos, conocé culturas fascinantes, disfrutá de la gastronomía local y relajate 
-		en las playas más paradisíacas. ¡Todo lo que necesitás para unas vacaciones inolvidables lo encontrarás en Travel Center Vacation 
-		¿Qué esperás para acceder al pack turístico de tus sueños? Nuestros expertos en viajes están a tu disposición para ayudarte a planificar la aventura de tu vida. 
-		¡Comenzá a hacer tus sueños realidad hoy mismo!</p>
+    <!--PÁRRAFO CON TEXTO-->
+<div>
+    <p class="texto-pack"> Con nuestro paquete turístico personalizado, podrás diseñar el viaje que siempre deseaste. 
+        Explorá destinos exóticos, conocé culturas fascinantes, disfrutá de la gastronomía local y relajate 
+        en las playas más paradisíacas. ¡Todo lo que necesitás para unas vacaciones inolvidables lo encontrarás en Travel Center Vacation 
+        ¿Qué esperás para acceder al pack turístico de tus sueños? Nuestros expertos en viajes están a tu disposición para ayudarte a planificar la aventura de tu vida. 
+        ¡Comenzá a hacer tus sueños realidad hoy mismo!</p>
   </div>
+
 
   <!--IMÁGENES DE PACKS DE VACACIONES-->
     <div class="image-container">
