--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
 		</p>
 	  </section>
 	  
+	  <div class="form1">
+		<h3>¡Preguntanos todo lo que quieras! completá nuestro formulario de consultas y dejá que nuestros expertos te guíen</h3>
+	  </div>
 
 	  <!-- FORMULARIO BÁSICO -->
 <div class="contenedor-formulario" style="background-image: url('#');"> 
