--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 	  </section>
 	  
 	  <div class="form1">
-		<h3>¡Preguntanos todo lo que quieras! completá nuestro formulario de consultas y dejá que nuestros expertos te guíen</h3>
+		<h3>¡Hacé tu consulta y dejá que nuestros expertos te guíen!</h3>
 	  </div>
 
 	  <!-- FORMULARIO BÁSICO -->
