--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
   </div>
 
 
-  <!--IMÁGENES DE PACKS DE VACACIONES-->
-    <div class="image-container">
-      <img src="./img/vacaciones1.jpg" alt="Inolvidables" class="image" />
-      <img src="./img/vacaciones2.jpg" alt="Emocionantes" class="image" />
-      <img src="./img/vacaciones3.jpg" alt="Inolvidables" class="image" />
-      <img src="./img/vacaciones4.jpg" alt="Emocionantes" class="image" />
-    </div>
+  <div class="image-container vacaciones">
+	<img src="./img/vacaciones1.jpg" alt="Inolvidables" class="image" />
+	<img src="./img/vacaciones2.jpg" alt="Emocionantes" class="image" />
+	<img src="./img/vacaciones3.jpg" alt="Inolvidables" class="image" />
+	<img src="./img/vacaciones4.jpg" alt="Emocionantes" class="image" />
+  </div>
+  
 
 </main>
 
