--- a/index.html
+++ b/index.html
@@ -198,9 +198,13 @@
 	<div class="cotizar">
 		<h3>¿Qué esperás para cotizar el viaje de tus sueños?</h3>
 	</div>
-	<p class="texto-gris">Estamos encantados de ayudarte a planificar tu próximo viaje y hacerlo realidad. 
-		Para obtener una cotización personalizada que se adapte a tus necesidades y presupuesto, 
-		por favor, completá el siguiente formulario.</p>
+	<p class="texto-gris">Estamos para ayudarte en cada paso del proceso de planificación de tu viaje. 
+		Al completar nuestro formulario de cotización personalizada, obtendremos una mejor idea de tus necesidades
+		 y preferencias de viaje. Desde destinos populares hasta lugares fuera de lo común, podemos ayudarte a encontrar 
+		 el viaje perfecto que se ajuste a tu presupuesto y estilo de viaje. Trabajaremos juntos para crear un itinerario 
+		 personalizado que cumpla con tus expectativas. No dudes en contactarnos en cualquier momento durante el proceso de 
+		 planificación del viaje, nuestro equipo de atención al cliente está disponible para ayudarte en todo lo que necesites. 
+		 ¡Completá el siguiente formulario y a comenzar la aventura!.</p>
 
   <!-- FORMULARIO DE PROCESO ESTILO WIZARD -->
   <!-- PASO 1 INICIA SOLICITANDO NOMBRE Y APELLIDO Y UNA VEZ QUE SE COMPETE
