--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 			<!--TÍTULO DE LA LANDING Y PRESENTACIÓN DE LA EMPRESA-->
 
-			<h1 class="titulo"></h1>
+			<h1 class="titulo">Travel Center Vacation</h1>
 			
 			<h2 class="titulo">¡Tu sueño de viajar hecho realidad!</h2>
 	
