Modificación en html

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
   
 	<div class="caja-formulario">
 	  <form id="formulario" method="post">
-		<label for="nombre">Nombre</label>
-		<input type="text" id="nombre" name="nombre">
+		<label for="nombres">Nombres</label>
+		<input type="text" id="nombres" name="nombres">
 
 		<label for="apellido">Apellido</label>
         <input type="text" id="apellido" name="apellido">
