--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
 <form id="formularioproceso">
 	<div class="paso" id="paso1">
 	  <h4>Paso 1: Información personal</h4>
-	  <label for="nombreuser">Nombre y apellido:</label>
-	  <input type="text" id="nombre" name="nombreuser">
+	  <label for="nombre">Nombre y apellido:</label>
+	  <input type="text" id="nombre" name="nombre">
 	  <label for="nombre">Correo electrónico:</label>
 	  <input type="text" id="correo" name="correo">
 	  <div class="botones">
